# sam_sample

./: README.md
src/: index.html  main.js  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  segment_anything.rs
